# reed-solomon-erasure

./: Cargo.toml  build.rs
src/: core.rs  errors.rs  galois_16.rs  galois_8.rs  galois_8_avx2.rs  galois_8_avx512.rs  galois_8_neon.rs  galois_8_sse3.rs  inversion_tree.rs  lib.rs  matrix.rs  platform.rs
src/tests/: galois_16.rs  mod.rs
