[package]
name = "reed-solomon-erasure"
version = "4.0.2"
authors = ["Darren Ldl <darrenldldev@gmail.com>"]
edition = "2018"
build = "build.rs"
exclude = ["appveyor.yml", ".travis.yml"]
description = "Rust implementation of Reed-Solomon erasure coding"
documentation = "https://docs.rs/reed-solomon-erasure"
homepage = "https://github.com/darrenldl/reed-solomon-erasure"
repository = "https://github.com/darrenldl/reed-solomon-erasure"
readme = "README.md"
keywords = ["reed-solomon", "erasure"]
categories = ["encoding"]
license = "MIT"

[features]
default = []

# Use this feature to enable unstable AVX512 and NEON on arm support (on nightly only)
# Otherwise AVX512 will use avx2 and NEON on arm will use pure rust
unstable = []

# Use these features to override detected levels of support
no_sse3 = []
no_avx2 = []
no_avx512 = []
no_neon = []

[badges]
travis-ci = { repository = "darrenldl/reed-solomon-erasure" }
appveyor = { repository = "darrenldl/reed-solomon-erasure" }
codecov = { repository = "darrenldl/reed-solomon-erasure" }
coveralls = { repository = "darrenldl/reed-solomon-erasure" }

[dependencies]
smallvec = "1.2"

[dev-dependencies]
rand = "0.8.5"
quickcheck = "1.0.3"
